// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SharedPromo component should render variation C correctly 1`] = `
<View>
  <AtomComponent
    crop="lfill"
    gravity="custom"
    height={180}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    width={320}
  >
    <AtomComponent
      color="white"
      family="archer"
      lineHeight={false}
      shadow={true}
      size="xlarge"
    />
  </AtomComponent>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderLeftColor": "#63666A",
          "borderLeftWidth": 8,
          "padding": 8,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <Text
      size="small"
    >
      Coupon Code:
       
      <AtomComponent
        color="accent"
        size="small"
        text="coupon"
      />
    </Text>
    <AtomComponent
      contentItemId={1}
      group={Object {}}
      trackAction="build:app:sharedpromo:cta"
    >
      <AtomComponent
        color="white"
        lineHeight={false}
        style={
          Object {
            "backgroundColor": "#D45D00",
            "padding": 16,
          }
        }
        weight="bold"
      />
    </AtomComponent>
  </View>
</View>
`;

exports[`SharedPromo component should render variation D correctly 1`] = `
<AtomComponent
  crop="lfill"
  gravity="custom"
  height={200}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "space-between",
      "padding": 16,
    }
  }
  width={320}
>
  <Text
    color="white"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "textShadowColor": "#00000080",
          "textShadowOffset": Object {
            "height": 1,
            "width": 1,
          },
          "textShadowRadius": 3,
        },
      ]
    }
  >
    Coupon Code: 
    <AtomComponent
      color="white"
      text="coupon"
      weight="bold"
    />
  </Text>
  <AtomComponent
    color="white"
    shadow={true}
    size="larger"
    weight="bold"
  />
  <AtomComponent
    contentItemId={1}
    group={Object {}}
    trackAction="build:app:sharedpromo:cta"
  >
    <AtomComponent
      color="white"
      lineHeight={false}
      style={
        Object {
          "backgroundColor": "#D45D00",
          "padding": 16,
        }
      }
      weight="bold"
    />
  </AtomComponent>
</AtomComponent>
`;

exports[`SharedPromo component should render variations A & B correctly 1`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderLeftColor": "#63666A",
        "borderLeftWidth": 8,
        "padding": 8,
      }
    }
  >
    <AtomComponent
      color="primary"
      family="archer"
      lineHeight={false}
      size="large"
      weight="bold"
    />
    <View
      style={
        Object {
          "borderLeftColor": "#D45D00",
          "borderLeftWidth": 8,
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        size="small"
      >
        Coupon Code:
         
        <AtomComponent
          color="accent"
          lineHeight={false}
          size="small"
          text="coupon"
        />
      </Text>
    </View>
  </View>
  <AtomComponent
    crop="lfill"
    gravity="custom"
    height={180}
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
    width={320}
  >
    <AtomComponent
      contentItemId={1}
      group={Object {}}
      trackAction="build:app:sharedpromo:cta"
    >
      <AtomComponent
        color="white"
        lineHeight={false}
        style={
          Object {
            "backgroundColor": "#D45D00",
            "padding": 16,
          }
        }
        weight="bold"
      />
    </AtomComponent>
  </AtomComponent>
</View>
`;
